[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codereview-env"
version = "0.1.0"
description = "Code Review Environment for OpenEnv Hackathon"
authors = [
    {name = "Developer"}
]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "requests"
]
