[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codereview-env"
version = "0.1.0"
description = "Code Review Environment for OpenEnv Hackathon"
authors = [
    {name = "Developer"}
]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"
